--- a/app/src/main/res/layout/activity_map_direction.xml
+++ b/app/src/main/res/layout/activity_map_direction.xml
@@ -1,8 +1,85 @@
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:sothree="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/sliding_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="false"
+        android:background="@android:color/transparent"
+        android:gravity="bottom"
+        android:overScrollMode="never"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar"
+        sothree:umanoDragView="@+id/dragView"
+        sothree:umanoFadeColor="@android:color/transparent"
+        sothree:umanoOverlay="true"
+        sothree:umanoPanelHeight="33dp"
+        sothree:umanoScrollableView="@+id/recycler_view"
+        sothree:umanoShadowHeight="0dp">
+
+        <FrameLayout
+            android:id="@+id/fl_cotent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/fl_bar"
+            android:background="@android:color/transparent">
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:map="http://schemas.android.com/apk/res-auto"
-          xmlns:tools="http://schemas.android.com/tools"
           android:id="@+id/map"
           android:name="com.google.android.gms.maps.SupportMapFragment"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           tools:context="com.buu.se.searchbangsaen.MapDirectionActivity"/>
+        </FrameLayout>
+        <!-- SLIDING LAYOUT -->
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@android:color/transparent"
+            android:clickable="true"
+            android:focusable="false"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/dragView"
+                android:layout_width="wrap_content"
+                android:layout_gravity="right"
+                android:layout_height="wrap_content"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"
+                android:paddingBottom="5dp"
+                android:background="#000000"
+                android:alpha="0.3"
+                style="@style/SimpleTextCloud.medium"
+                android:textColor="#ffffff"
+                android:text="ข้อมูล"/>
+
+            <LinearLayout
+                android:id="@+id/ln_SearchData"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black_transparent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_direction"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"
+                    android:textColor="#000000"
+                    android:padding="5dp"
+                    android:layout_gravity="right"
+                    style="@style/SimpleTextCloud.medium.bold"
+                    android:text="ระยะทาง"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+</RelativeLayout>
