--- a/app/src/main/res/layout/benefits_layout.xml
+++ b/app/src/main/res/layout/benefits_layout.xml
@@ -5,6 +5,7 @@
               android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_st"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_gravity="center"
@@ -13,7 +14,6 @@
     <TextView
         android:layout_marginLeft="5dp"
         android:id="@+id/tv_benef"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
