--- a/app/src/main/res/layout/fragment_register_picture.xml
+++ b/app/src/main/res/layout/fragment_register_picture.xml
@@ -57,15 +57,15 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <ImageView
-            android:id="@+id/add_img"
-            android:layout_width="240dp"
-            android:layout_height="240dp"
-            android:padding="2dp"
-            android:background="@drawable/broder_img"
-            android:src="@drawable/img_tom"
-
-            />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_profile_add"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_centerHorizontal="true"
+            android:padding="0dp"
+            android:src="@drawable/user_profile"
+            app:civ_border_color="#ffffff"
+            app:civ_border_width="3dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
