--- a/app/src/main/res/layout/list_item_card_hotel.xml
+++ b/app/src/main/res/layout/list_item_card_hotel.xml
@@ -11,15 +11,32 @@
                                     app:cardElevation="3dp"
                                     app:contentPadding="3dp">
 
-    <LinearLayout
-        android:id="@+id/llDetail"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:orientation="horizontal"
-        android:padding="10dp"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:paddingLeft="5dp"
+            android:paddingTop="1dp"
+            android:id="@+id/tv_name"
+            style="@style/SimpleTextCloud.large.bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="โรงแรม"
+            android:textColor="#848181"
+            />
+
+        <LinearLayout
+            android:id="@+id/llDetail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_name"
+            android:orientation="horizontal"
+          android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
         >
-
-
         <ImageView
             android:id="@+id/iv_hotel"
             android:layout_width="0dp"
@@ -46,15 +63,6 @@
                 android:orientation="vertical"
                 android:weightSum="5">
 
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="21dp"
-                    android:layout_weight="1"
-                    android:text="โรงแรม"
-                    android:textColor="#848181"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
 
             </LinearLayout>
 
@@ -88,6 +96,7 @@
         </LinearLayout>
 
         <LinearLayout
+         android:paddingTop="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -111,18 +120,19 @@
                 android:layout_gravity="top"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="2,500"
-                android:textSize="18sp"
+                style="@style/SimpleTextCloud.micro.bold"
+                android:text="THB 2,500"
                 />
 
             <TextView
+                style="@style/SimpleTextCloud.micro.bold"
                 android:id="@+id/tv_price_title_t"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:text="THB 1,500"
-                android:textSize="18sp"
+
                 />
 
 
@@ -137,4 +147,5 @@
 
         </LinearLayout>
     </LinearLayout>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
