--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+    >
 
     <ImageView
         android:id="@+id/ivShow"
         android:layout_width="150dp"
-        android:layout_height="140dp"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:layout_margin="5dp"
+        android:layout_centerInParent="true"
         android:background="@drawable/image_border"
         android:transitionName="shareView"
         android:padding="10dp" />
 
-</LinearLayout>
+</RelativeLayout>
