--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tvTitle"
+    app:cardBackgroundColor="#ff9100"
+    app:cardCornerRadius="0dp"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="#ff9100">
+    app:cardElevation="3dp">
 
-    <ImageView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <ImageView
         android:id="@+id/ivBack"
         android:layout_width="60dp"
         android:layout_height="match_parent"
-        android:padding="15dp"
+        android:paddingBottom="15dp"
+        android:paddingRight="15dp"
         android:paddingTop="15dp"
         android:src="@drawable/btn_back"/>
 
@@ -35,6 +43,8 @@
         android:layout_alignParentRight="true"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
+        android:adjustViewBounds="true"
         android:src="@drawable/plus_button"/>
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
 
