--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="large_font_size_tv">26sp</dimen>
-    <dimen name="medium_font_size_tv">20sp</dimen>
+    <dimen name="medium_font_size_tv">22sp</dimen>
+    <dimen name="mini_font_size_tv">16sp</dimen>
+    <dimen name="micro_font_size_tv">12sp</dimen>
     <dimen name="tool_bar_text_size">22sp</dimen>
 
     <dimen name="main_screen_side_padding">10dp</dimen>
