--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:src="@drawable/bg_search"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_marginLeft="10dp"
             />
         <TextView
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="เข้าสู่ระบบ"
-
+            android:visibility="gone"
             android:gravity="right"
             android:layout_gravity="center"
             android:textStyle="bold"
@@ -60,13 +60,12 @@
             android:id="@+id/rl_profile"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:visibility="gone"
+            android:visibility="visible"
             android:padding="10dp"
             android:layout_height="match_parent">
         <ImageView
             android:layout_alignParentRight="true"
             android:id="@+id/iv_profile"
-
             android:src="@drawable/user_profile"
             android:adjustViewBounds="true"
             android:layout_width="match_parent"
