--- a/app/src/main/res/layout/activity_restaurant_search.xml
+++ b/app/src/main/res/layout/activity_restaurant_search.xml
@@ -39,4 +39,18 @@
         android:layout_height="match_parent"
         />
   </FrameLayout>
+
+  <FrameLayout
+      android:id="@+id/fl_connecting"
+      android:layout_width="match_parent"
+      android:visibility="gone"
+      android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/btn_connecting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="try connecting"/>
+  </FrameLayout>
 </RelativeLayout>
