--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -59,8 +59,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:paddingLeft="60dp"
-        android:paddingRight="60dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
         >
 
         <LinearLayout
@@ -68,7 +68,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -180,6 +179,7 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="40dp"
+                android:textColor="#ffffff"
                 android:background="#009a9a"
                 android:text="ต่อไป"/>
         </LinearLayout>
