--- a/app/src/main/res/layout/fragment_register_picture.xml
+++ b/app/src/main/res/layout/fragment_register_picture.xml
@@ -75,6 +75,11 @@
             android:layout_gravity="center"
             >
 
+            <LinearLayout
+                android:id="@+id/ll_add_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -87,8 +92,15 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/accent_White"/>
+            </LinearLayout>
 
-            <ImageView
+            <LinearLayout
+                android:id="@+id/ll_del_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/icon_delete"
@@ -101,7 +113,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/accent_White"/>
-
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
